# ssmc

src/cli/include/ssmk/cli/: application.hpp
src/cli/src/cli/: options.cpp  run.cpp
src/ssmk/: CMakeLists.txt
src/ssmk/include/ssmk/: context.hpp  exceptions.hpp  sprite.hpp  ssmk.hpp  version.hpp.in
src/ssmk/src/: buildPngChunk.cpp  build_png_chunk.cpp  context.cpp  copySprites.cpp  copy_sprites.cpp  extract_png_chunk.cpp  fillContext.cpp  fill_context.cpp  findFiles.cpp  find_files.cpp  makeOutputPng.cpp  make_output_png.cpp  packSprites.cpp  pack_sprites.cpp  readConfig.cpp  readImageHeaders.cpp  readSpriteHeaders.cpp  read_sheet_header.cpp  read_sprite_headers.cpp  sprite.cpp  writeImages.cpp  writePng.cpp  writeSprites.cpp  write_png.cpp
src/ssmk/tests/: CMakeLists.txt  ex1.cpp  findFiles-noSprites.cpp  find_files-no_sprites.cpp  generated.cpp  paletted.cpp  readConfig-configDirectoryIsAFile.cpp  readConfig-negativeKPacking.cpp  readConfig-noConfig.cpp  readConfig-notRGB.cpp  readConfig-shortRGBarray.cpp  readConfig-treeFitIncreasingPacking.cpp  readConfig.cpp  read_config-negative_k_packing.cpp  read_config-no_config.cpp  read_config-not_RGB.cpp  read_config-short_RGB_array.cpp  read_config-tree_fit_increasing_packing.cpp
src/ssmk/tests/pnggen/: CMakeLists.txt  main.cpp
src/ssmk/tests/projects/ex1/: ssmk.toml
src/ssmk/tests/projects/not_RGB/: ssmk.toml
src/ssmk/tests/projects/paletted/: ssmk.toml
src/ssmk/tests/projects/short_RGB_array/: ssmk.toml
